--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -130,22 +130,37 @@
   height: 460px;
 }
 
-.modal_content_left{
+.modal_content_left {
   width: 500px;
   border-right: solid 1px #aaa;
-  overflow: auto;;
-  padding: 12px;
+  overflow: auto;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
-.modal_content_right{
+.modal_content_left_content {
+  flex: 1;
+  padding: 12px;
 }
 
-.form_row{
+.modal_bottom_control {
+  border-top: solid 1px #aaa;
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding: 12px 16px;
+  display: flex;
+  gap: 12px;
+}
+
+.modal_content_right {
+}
+
+.form_row {
   display: flex;
   align-items: center;
   font-size: 14px;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
 }
 
 .form_row_label {
@@ -158,7 +173,7 @@
 
 .form_button {
   line-height: 28px;
-  font-size: 14px;
+  font-size: 13px;
   box-sizing: border-box;
   padding: 0 8px;
 }
