--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -215,3 +215,15 @@ input[type="number"] {
   box-sizing: border-box;
   padding: 0 8px;
 }
+
+.asset_preview {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+}
+.asset_preview_image {
+  width: 100%;
+  max-height: 170px;
+}
