:heavy_plus_sign: テキストのプレビュー

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -65,7 +65,7 @@ input[type="number"] {
   font-size: 12px;
   border-collapse: collapse;
   color: #333;
-  user-select: none;;
+  user-select: none;
 }
 .asset_table_th {
   font-size: 10px;
@@ -86,7 +86,7 @@ input[type="number"] {
   font-size: 12px;
   border-collapse: collapse;
   color: #333;
-  user-select: none;;
+  user-select: none;
 }
 .frame_events_table_th {
   font-size: 10px;
@@ -222,6 +222,7 @@ input[type="number"] {
   justify-content: center;
   align-items: center;
   padding: 12px;
+  overflow: auto;
 }
 .asset_preview_image {
   width: 100%;
