--- a/frontend/edit_event_modal.css
+++ b/frontend/edit_event_modal.css
@@ -6,10 +6,13 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.edit_event_modal {
+  width: 950px;
+}
+
 .modal {
   z-index: 2;
   position: absolute;
-  width: 950px;
   background-color: #f9f9f9;
   top: 50px;
   right: 0;
@@ -78,4 +81,20 @@
   position: relative;
   transform-origin: top left;
   transform: scale(calc(320 / 640));
+}
+
+.edit_text_modal {
+  width: 500px;
+}
+
+.edit_text_modal_form {
+  flex-grow: 1;
+  padding: 12px 16px 12px 12px;
+}
+.edit_text_modal_content {
+  width: 100%;;
+  overflow: auto;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
