--- a/frontend/edit_event_modal.css
+++ b/frontend/edit_event_modal.css
@@ -98,3 +98,8 @@
   display: flex;
   flex-direction: column;
 }
+.edit_image_modal_image {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+}
